--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
       <div class="profile">
         <img src="static/img/amine.png" alt="Fekih" class="img-fluid rounded-circle">
-        <h1 class="text-light text-center">Mohamed El Amin Fekih</h1>
+        <h1 class="text-light text-center">Mohammed El Amin Fekih</h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.kaggle.com/fekihmea" class="kaggle" alt="Kaggle" target="_blank"><i class="bx bxl-kaggle">K</i></a>
-          <a href="https://www.linkedin.com/in/fekih-mohamed-el-amin/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/fekih-mohammed-el-amin/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://github.com/meafekih" class="github" target="_blank"><i class="bx bxl-github"></i></a>
           <a href="#" class="whatsapp"><i class="bx bxl-whatsapp" target="_blank"></i></a>
         </div>
@@ -73,7 +73,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Mohamed El Amin Fekih</h1>
+      <h1>Mohammed El Amin Fekih</h1>
       <p>I'm <span class="typed"
           data-typed-items="Data Analyst, Data scientist, Django Developer, Python Developer"></span></p>
     </div>
@@ -105,7 +105,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>linkedin</strong><span>https://www.linkedin.com/in/fekih-mohamed-el-amin/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>linkedin</strong><span>https://www.linkedin.com/in/fekih-mohammed-el-amin/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+213 772181646</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong><span>mea.fekih@gmail.com</span>
                 </ul>
@@ -142,21 +142,7 @@
 
         <div class="row">
 
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-
-            <div class="resume-item pb-0">
-              <h4>Mohamed El Amin Fekih</h4>
-              <p><em>I am a data analyst data scientist with experience in Python and Odoo, as well as a range of other skills including
-                  backend development.</em></p>
-              <ul>
-                <li>Algeria, Tlemcen</li>
-                <li>+213 772781646</li>
-                <li>mea.fekih@gmail.com</li>
-              </ul>
-            </div>
-
-
+          <div class="col-lg-6" data-aos="fade-up">     
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Master of Machine learning</h4>
@@ -206,8 +192,8 @@
             </div>
 
             <div class="text-center">
-              <a class="btn btn-primary download-button col text-center" href="static/img/Fekih_mohamed_el_amin.pdf"
-                download="Fekih_mohamed_el_amin.pdf">
+              <a class="btn btn-primary download-button col text-center" href="static/img/Fekih_mohammed_el_amin.pdf"
+                download="Fekih_mohammed_el_amin.pdf">
                 <i class="fas fa-download"></i> Download CV </a>
             </div>
           </div>
@@ -650,7 +636,7 @@
                 <br>
                 <div class="text-center">
                   <a class="btn btn-primary download-button col text-center"
-                    href="static/img/Fekih_mohamed_el_amin.pdf" download="Fekih_mohamed_el_amin.pdf">
+                    href="static/img/Fekih_mohammed_el_amin.pdf" download="Fekih_mohammed_el_amin.pdf">
                     <i class="fas fa-download"></i> Download cover-letter </a>
                 </div>
               </div>
@@ -965,7 +951,7 @@
               <div class="linkedin">
                 <i class="bi bi-linkedin"></i>
                 <h4>linkedin:</h4>
-                <a href="https://www.linkedin.com/in/fekih-mohamed-el-amin/" target="_blank">Fekih Mohammad</a>
+                <a href="https://www.linkedin.com/in/fekih-mohammed-el-amin/" target="_blank">Fekih Mohammed el amin</a>
               </div>
             </div>
           </div>
