--- a/index.html
+++ b/index.html
@@ -675,11 +675,20 @@
               <img src="static/img/gbic.jpg" class="img-fluid" alt="Google Business intelligence certificate">
               <div class="portfolio-links">
                 <a href="static/img/gbic.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="Google Business intelligence certificate"><i class="bx bx-plus"></i></a>
+                  title="Google Business intelligence certificate"><i class="bx bx-plus">+</i></a>
               </div>
-            </div>
+            </div>            
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="static/img/iids.jpg" class="img-fluid" alt="IBM Introduction to Data Science">
+              <div class="portfolio-links">
+                <a href="static/img/iids.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="IBM Introduction to Data Science"><i class="bx bx-plus">+</i></a>
+              </div>
+            </div>            
+          </div>
 
 
         </div>
