--- a/project.html
+++ b/project.html
@@ -1,159 +1,179 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Stellar by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Selam Weldu</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
+		<!-- <link rel="icon" type="image/png" href="./favicon_io/favicon-32x32.png" /> -->
+		<link rel="icon" type="image/png" href="./favicon_io/favicon-32x32.png" />
+		<link rel="stylesheet"
+			href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+						<!-- Second Section -->
+							<section id="second" class="main special">
+								<header class="major">
+									<h2>Skills</h2>
+									<p>I write clean, elegant and efficient code using:</p>
+								</header>
+								<ul class="statistics">
+									<li class="style1">
+										<p class="skill"><i class="devicon-rails-plain"></i></p>
+										<p>Rails</p>
+									</li>
+									<li class="style2">
+										<p class="skill"><i class="devicon-ruby-plain"></i></p>
+										<p>Ruby</p>
+									</li>
+									<li class="style3">
+										<p class="skill"><i class="devicon-javascript-plain"></i></p>
+										<p>JavaScript</p>
+									</li>
+									<li class="style4">
+										<p class="skill"><i class="devicon-react-original"></i></p>
+										<p>React</p>
+									</li>
+									<li class="style5">
+										<p class="skill"><i class="devicon-nodejs-plain"></i></p>
+										<p>Node.js</p>
+									</li>
+								</ul>
+								<ul class="statistics">
+									<li class="style5">
+										<p class="skill"><i class="devicon-express-original"></i></p>
+										<p>Express</p>
+									</li>
+									<li class="style4">
+										<p class="skill"><i class="devicon-postgresql-plain"></i></p>
+										<p>PostgreSQL</p>
+									</li>
+									<li class="style3">
+										<p class="skill"><i class="devicon-mongodb-plain"></i></p>
+										<p>MongoDB</p>
+									</li>
+									<li class="style2">
+										<p class="skill"><i class="devicon-html5-plain"></i></p>
+										<p>HTML</p>
+									</li>
+									<li class="style1">
+										<p class="skill"><i class="devicon-css3-plain"></i></p>
+										<p>CSS</p> 
+									</li>
+								</ul>
+								<ul class="statistics">
+									<li class="style1">
+										<p class="skill"><i class="devicon-jquery-plain"></i></p>
+										<p>jquery</p>
+									</li>
+									<li class="style2">
+										<p class="skill"><i class="devicon-github-plain"></i></p>
+										<p>Github</p>
+									</li>
+									<li class="style3">
+										<p class="skill"><i class="devicon-webpack-plain"></i></p>
+										<p>Webpack</p>
+									</li>
+									<li class="style4">
+										<p class="skill"><i class="devicon-amazonwebservices-plain-wordmark"></i></p>
+										<p>AWS</p> 
+									</li>
+									<li class="style5">
+										<p class="skill"><i class="devicon-babel-plain"></i></p>
+										<p>Babel</p> 
+									</li>
+								</ul>
+									
+								
+								<!-- <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p> -->
+								<!-- <footer class="major">
+									<ul class="actions special">
+										<li><a href="generic.html" class="button">Learn More</a></li>
+									</ul>
+								</footer> -->
+							</section>
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+					</div>
 
-  <!-- Vendor CSS Files -->
-  <link href="static/vendor/aos/aos.css" rel="stylesheet">
-  <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="static/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="static/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="static/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+				<!-- Footer -->
+					<footer id="footer">
+						<!-- <section>
+							<h2>Aliquam sed mauris</h2>
+							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<ul class="actions">
+								<li><a href="generic.html" class="button">Learn More</a></li>
+							</ul>
+						</section> -->
+						<section>
+							<h2>Contact Me</h2>
+							<dl class="alt" id="cta">
+								<!-- <br><br> 
+								<dt>Phone</dt>
+								<dd>+1 (415) 717-7154</dd> -->
+								<dt>Email</dt>
+								<dd><a href="#">ssweldu@gmail.com</a></dd>
+							</dl>
+							<ul class="icons">
+								<li><a href="https://www.linkedin.com/in/selamweldu/" target="_blank"
+										class="icon brands fab fa-linkedin alt"><span class="label">linkedin</span></a></li>
+								<li><a href="https://github.com/selam-weldu/" target="_blank" class="icon brands fa-github alt"><span
+											class="label">GitHub</span></a></li>
+								<li><a href="https://angel.co/selam-weldu?al_content=view+your+profile&al_source=transaction_feed%2Fnetwork_sidebar"
+										target="_blank" class="icon brands ab fa-angellist alt"><span class="label">AngelList</span></a></li>
+							</ul>
+						</section>
+						<section>
+							<!-- <form method="post" action="#"> -->
+							<form action="https://formsubmit.co/ssweldu@gmail.com" method="POST"
+									onSubmit="alert('Thank you for sending a message.')">
+								<h4>Feel free to send me a message or use the links to get in touch </h4>
+								<div class="row">
+									<div class="col-6 col-12-mobilep">
+										<input type="text" name="name" placeholder="Name" required/>
+									</div>
+									<div class="col-6 col-12-mobilep">
+										<input type="email" name="email" placeholder="Email" required/>
+									</div>
+									<br> <br>
+									<div class="col-12">
+										<textarea name="message" placeholder="Message" rows="6" required></textarea>
+									</div>
+									<input type="text" name="_honey" style="display:none">
+									<input type="hidden" name="_next" value="https://selamweldu.com">
 
-  <!-- Template Main CSS File -->
-  <link href="static/css/style.css" rel="stylesheet">
 
-  
-</head>
+									<div class="col-12">
+										<br>
+										<ul class="actions special">
+											<li><input type="submit" value="Send Message" /></li>
+										</ul>
+									</div>
+								</div>
+							</form>
+						</section>
+						<p class="copyright">&copy; Selam Weldu. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+					</footer>
 
-<body>
+			</div>
 
-  <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-  <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="d-flex flex-column">
-
-      <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        </div>
-      </div>
-
-      <nav id="navbar" class="nav-menu navbar">
-        <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
-    </div>
-  </header><!-- End Header -->
-
-  <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
-          <ol>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li>Portfoio Details</li>
-          </ol>
-        </div>
-
-      </div>
-    </section><!-- End Breadcrumbs -->
-
-    <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-                <div class="swiper-slide"><img src="{% static 'img/portfolio/portfolio-details-1.jpg' %}" alt=""></div>
-                <div class="swiper-slide"><img src="{% static 'img/portfolio/portfolio-details-2.jpg' %}" alt=""></div>
-                <div class="swiper-slide"><img src="{% static 'img/portfolio/portfolio-details-3.jpg' %}" alt=""></div>
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
-
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Portfolio Details Section -->
-
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End  Footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="static/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="static/vendor/aos/aos.js"></script>
-  <script src="static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="static/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="static/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="static/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="static/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="static/js/main.js"></script>
-
-</body>
-
+	</body>
 </html>
