--- a/index.html
+++ b/index.html
@@ -95,23 +95,17 @@
           <li>
 
             <a href="#hero" class="nav-link scrollto active" target="_blank">
-            <i class="bx bx-home"></i>
+             
               <span>Home</span>
             </a>
           </li>
 
-          <li><a href="#about" class="nav-link scrollto" target="_blank"><i class="bx bx-user"></i>
-              <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto" target="_blank"><i class="bx bx-file-blank"></i>
-              <span>Resume</span></a></li>
-          <li><a href="#skills" class="nav-link scrollto" target="_blank"><i class="bx bx-server"></i>
-              <span>Skills</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto" target="_blank"><i class="bx bx-link"></i>
-              <span>Projects</span></a></li>
-          <li><a href="#certificates" class="nav-link scrollto" target="_blank"><i
-                class="bx bx-file-blank"></i><span>Certificates</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto" target="_blank"><i class="bx bx-envelope"></i>
-              <span>Contact</span></a></li>
+          <li><a href="#about" class="nav-link scrollto" target="_blank"><span>About</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto" target="_blank"><span>Resume</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto" target="_blank"><span>Skills</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto" target="_blank"><span>Projects</span></a></li>
+          <li><a href="#certificates" class="nav-link scrollto" target="_blank"><span>Certificates</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto" target="_blank"><span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
