--- a/index.html
+++ b/index.html
@@ -92,20 +92,13 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li>
-
-            <a href="#hero" class="nav-link scrollto active" target="_blank">
-             
-              <span>Home</span>
-            </a>
-          </li>
-
-          <li><a href="#about" class="nav-link scrollto" target="_blank"><span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto" target="_blank"><span>Resume</span></a></li>
-          <li><a href="#skills" class="nav-link scrollto" target="_blank"><span>Skills</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto" target="_blank"><span>Projects</span></a></li>
-          <li><a href="#certificates" class="nav-link scrollto" target="_blank"><span>Certificates</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto" target="_blank"><span>Contact</span></a></li>
+          <li><a href="#hero" class="nav-link scrollto active" target="_blank"><i></i><span>Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto" target="_blank"><i></i><span>About</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto" target="_blank"><i></i><span>Resume</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto" target="_blank"><i></i><span>Skills</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto" target="_blank"><i></i><span>Projects</span></a></li>
+          <li><a href="#certificates" class="nav-link scrollto" target="_blank"><i></i><span>Certificates</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto" target="_blank"><i></i><span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -403,16 +396,13 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-da">Retail Analysis</li>
-              <li data-filter=".filter-da">Marketing Analysis</li>
-              <li data-filter=".filter-da">Financial Analysis</li>
-              <li data-filter=".filter-da">Customer Analysis</li>
-              <li data-filter=".filter-da">Advertising Analysis</li>
-              <li data-filter=".filter-da">Human Resources Analysis</li>
-              <li data-filter=".filter-da">Social Media Analysis</li>
-              <li data-filter=".filter-da">Insurance Analysis</li>
-              <li data-filter=".filter-da">Manufacturing Analysis</li>
-              <li data-filter=".filter-da">Healthcare Analysis</li>
+              <li data-filter=".filter-app">Retail Analysis</li>
+              <li data-filter=".filter-cu">Customer Analysis</li>
+              <li data-filter=".filter-mra">Marketing Analysis</li>
+              <li data-filter=".filter-fa">Financial Analysis</li>
+              <li data-filter=".filter-ma">Manufacturing Analysis</li>
+              <li data-filter=".filter-ml">Machine Learning</li>
+              <li data-filter=".filter-dl">Deep learning</li>
 
             </ul>
 
@@ -421,109 +411,40 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cu">
             <div class="portfolio-wrap">
-              <img src="static/img/p1/1.png" class="img-fluid" alt="">
+                <h5>Customers Segmentation ( K-Means, RFM )</h5>
+              <img src="static/img/projects/1.png" width="1000" height="1000" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="static/img/p1/1.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="Customers Segmentation ( K-Means, RFM )"><i class="bx bx-plus"></i></a>
-                <!--a href="#" title="More Details"><i class="bx bx-link"></i></a-->
-                <a href="#project1" class="nav-link scrollto" data-scroll="true"><i class="bx bx-link"></i></a>
-
-              </div>
+               <a href="https://www.kaggle.com/code/fekihmea/customers-segmentation-k-means-rfm"
+               target="_blank"><h4>+</h4></a>  
+               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-ds">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cu">
             <div class="portfolio-wrap">
-              <img src="static/img/2.jpeg" class="img-fluid" alt="">
+                <h5>Customers Segmentation ( K-Means, RFM )</h5>
+              <img src="static/img/projects/2.png" width="1000" height="1000" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="static/img/2.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i
-                    class="bx bx-plus"></i></a>
-                <!--a href="#" title="More Details"><i class="bx bx-link"></i></a-->
-                <a href="#project2" class="nav-link scrollto" data-scroll="true"><i class="bx bx-link"></i></a>
-              </div>
+               <a href="https://www.kaggle.com/code/fekihmea/customers-segmentation-k-means-rfm"
+               target="_blank"><h4>+</h4></a>  
+               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-js">
-            <div class="portfolio-wrap">
-              <img src="static/img/3.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="static/img/3.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i
-                    class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-py">
-            <div class="portfolio-wrap">
-              <img src="static/img/4.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="static/img/4.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i
-                    class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-ds">
-            <div class="portfolio-wrap">
-              <img src="static/img/5.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="static/img/5.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i
-                    class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="static/img/6.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="static/img/6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i
-                    class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="static/img/7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="static/img/7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i
-                    class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="static/img/8.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="static/img/8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i
-                    class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-sc">
-            <div class="portfolio-wrap">
-              <img src="static/img/9.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="static/img/9.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i
-                    class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
         </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-cu">
+          <div class="portfolio-wrap">
+              <h5>Customers Segmentation ( K-Means, RFM )</h5>
+            <img src="static/img/projects/3.png" width="1000" height="1000" class="img-fluid" alt="">
+            <div class="portfolio-links">
+             <a href="https://www.kaggle.com/code/fekihmea/customers-segmentation-k-means-rfm"
+             target="_blank"><h4>+</h4></a>  
+             </div>
+          </div>
+        </div>
+      </div>
 
       </div>
     </section>
@@ -643,158 +564,7 @@
     </section>
     <!-- End Contact Section -->
 
-
-
-
-
-
-
-    <!-- ======= Portfolio Details Section ======= -->
-    <section id="project1" class="portfolio-details">
-
-      <div class="container">
-
-
-        <div class="row gy-4">
-          <div class="section-title">
-            <h2>Customer lifetime Values</h2>
-          </div>
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-                <div class="swiper-slide"><img src="static/img/p1/1.png" alt=""></div>
-                <div class="swiper-slide"><img src="static/img/p1/2.png" alt=""></div>
-                <div class="swiper-slide"><img src="static/img/p1/3.png" alt=""></div>
-                <div class="swiper-slide"><img src="static/img/p1/4.png" alt=""></div>
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-
-            <div class="text-center">
-              <button class="btn btn-primary"><a href="#all_project" class="btn btn-primary text-white">Back to
-                  projects</a></button>
-              <button class="btn btn-primary"><a href="https://kaggle.com" class="btn btn-primary text-white"
-                  target="_blank">Go to project</a></button>
-            </div>
-
-
-          </div>
-
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: Customer Segmentation</li>
-                <li><strong>Client</strong>: Open source Kaggle dataset</li>
-                <li><strong>Project date</strong>: 01 November, 2023</li>
-                <li><strong>Project URL</strong>: <a
-                    href="https://www.kaggle.com/code/fekihmea/customers-segmentation-k-means-rfm" target="_blank">link
-                    project</a></li>
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>Project detail</h2>
-              <p>
-                The most successful companies today are the one's who know their customers so well that they are able to
-                anticipate their needs beforehand. This can better be achieved if we can segment the customers into
-                different groups that reflect the similarities among the customers in each group. The goal of the
-                segmentation is to foresee the needs of customers, get to know their interests, lifestyles, priorities
-                and learn their spending habits so that to maximize the value of customers to the business. Customer
-                segmentation has many advantages for the businesses which include, Price Optimization, Enhanced
-                Competitiveness, Acquisition and Retention, Increased Revenues.
-
-                Customer Segmentation:<br>
-                Customer Churn Analysis:<br>
-                Market Basket Analysis:<br>
-                Supply Chain Optimization:<br>
-                Text Mining and Natural Language Processing (NLP):<br>
-                A/B Testing:<br>
-                Data Governance and Data Quality:<br>
-                Customer Lifetime Value (CLV) Analysis:<br>
-                Data Ethics and Privacy:<br>
-                Image and Video Analytics:<br>
-                Ethical AI and Bias Mitigation:<br>
-
-                Predictive Analytics<br>
-                Data Visualization<br>
-                Time Series Analysis<br>
-                Machine Learning<br>
-                Social Media Analytics<br>
-                Geospatial Analytics<br>
-                Healthcare Analytics<br>
-                Fraud Detection<br>
-              </p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Portfolio Details Section -->
-
-
-
-
-    <section id="project2" class="portfolio-details">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Segmentation Customer</h2>
-          <!--p>Thank you for visiting and spending your </p-->
-        </div>
-
-        <div class="row gy-4">
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-                <div class="swiper-slide"><img src="static/img/1.jpeg" alt=""></div>
-                <div class="swiper-slide"><img src="static/img/2.jpeg" alt=""></div>
-                <div class="swiper-slide"><img src="static/img/3.jpeg" alt=""></div>
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-
-            <div class="text-center">
-              <button class="btn btn-primary"><a href="#all_project" class="btn btn-primary text-white">Back to
-                  projects</a></button>
-              <button class="btn btn-primary"><a href="https://kaggle.com" class="btn btn-primary text-white"
-                  target="_blank">Go to project</a></button>
-            </div>
-
-
-
-
-          </div>
-
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia.
-                Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia
-                accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt
-                eius.
-              </p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Portfolio Details Section -->
-
-
-
-
+ 
 
 
   </main>
@@ -804,7 +574,7 @@
   <footer id="footer">
     <div class="container">
       <div class="credits">
-        My image displayed has been created using AI to safeguard personal privacy.
+        My image displayed has been created using AI.
       </div>
     </div>
   </footer>
@@ -814,13 +584,14 @@
       class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="static/js/purecounter_vanilla.js"></script>
-  <script src="static/js/aos.js"></script>
   <script src="static/js/bootstrap.bundle.min.js"></script>
+  <script src="static/js/swiper-bundle.min.js"></script>
   <script src="static/js/glightbox.min.js"></script>
   <script src="static/js/isotope.pkgd.min.js"></script>
-  <script src="static/js/swiper-bundle.min.js"></script>
   <script src="static/js/typed.min.js"></script>
+  <script src="static/js/aos.js"></script>
+
+  <script src="static/js/purecounter_vanilla.js"></script>
   <script src="static/js/noframework.waypoints.js"></script>
   <script src="static/js/validate.js"></script>
 
@@ -828,10 +599,10 @@
   <!-- Template Main JS File -->
   <script src="static/js/main.js"></script>
 
-  <!--Boot Strap link-->
+  <!--Boot Strap link
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
     crossorigin="anonymous"></script>
