--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
       <div class="container" id="all_project">
 
         <div class="section-title">
-          <h2>Projects</h2>
+          <h2>Some Projects</h2>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -512,7 +512,7 @@
               <img src="static/img/DAP.jpg" class="img-fluid" alt="Google data analytics professional">
               <div class="portfolio-links">
                 <a href="static/img/DAP.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="Google data analytics professional"><i class="bx bx-plus">+</i></a>
+                  title="Google data analytics professional"><h5>Google data analytics professional</h5></a>
               </div>
             </div>            
           </div>
@@ -522,7 +522,7 @@
               <img src="static/img/gbic.jpg" class="img-fluid" alt="Google Business intelligence certificate">
               <div class="portfolio-links">
                 <a href="static/img/gbic.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="Google Business intelligence certificate"><i class="bx bx-plus">+</i></a>
+                  title="Google Business intelligence certificate"><h5>Google Business intelligence certificate</h5></a>
               </div>
             </div>            
           </div>
@@ -532,7 +532,7 @@
               <img src="static/img/iids.jpg" class="img-fluid" alt="IBM Introduction to Data Science">
               <div class="portfolio-links">
                 <a href="static/img/iids.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="IBM Introduction to Data Science"><i class="bx bx-plus">+</i></a>
+                  title="IBM Introduction to Data Science"><h5>IBM Introduction to Data Science</h5></a>
               </div>
             </div>            
           </div>
@@ -542,7 +542,7 @@
               <img src="static/img/dsp.jpg" class="img-fluid" alt="IBM Data Science Professional">
               <div class="portfolio-links">
                 <a href="static/img/dsp.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="IBM Data Science Professional"><i class="bx bx-plus">+</i></a>
+                  title="IBM Data Science Professional"><h5>IBM Data Science Professional</h5></a>
               </div>
             </div>            
           </div>
